fix tooltips that were not readable

--- a/styles/theme/_tooltips.scss
+++ b/styles/theme/_tooltips.scss
@@ -1,9 +1,9 @@
 .v-tooltip__content {
-  background: $white;
+  // background: $white;
   padding: $padding-small $padding-general;
   min-width: $tooltip-min-width;
   max-width: $tooltip-max-width;
-  color: $gray !important;
+  // color: $gray !important;
   font-size: $font-size-small;
   font-weight: $font-weight-base;
   @include shadow-8dp();
